Fix blurry canvas due to scaling up

--- a/style.css
+++ b/style.css
@@ -4,9 +4,3 @@ body {
     width: 100vw;
     height: 100vh;
 }
-
-#roobix_cvs {
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-}
